--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,6 +4,7 @@
 <meta charset="UTF-8" />
 <title>Blog</title>
 <link rel="stylesheet" href="/stylesheets/style.css">
+<script src="/js/jquery.min.js" ></script>
 </head>
 <body>
 
