--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <title>Blog</title>
 <link rel="stylesheet" href="/stylesheets/style.css">
-<script src="/js/jquery.min.js" ></script>
+<script src="/js/jquery-1.11.0.js" ></script>
 </head>
 <body>
 
